^ Reduced frontend CSS being loaded by moving CSS to backend only and some to item form loading only (new CSS file: flexi_fields.css)

--- a/admin/assets/css/j3x.css
+++ b/admin/assets/css/j3x.css
@@ -367,7 +367,8 @@ div table.admintable td {
 	text-align: left;
 	padding: 2px 4px 2px 8px;
 }
-div table.admintable td.key, div table.admintable td.paramlist_key {
+div table.admintable td.key,
+div table.admintable td.paramlist_key {
 	background-color: #F2F2F2;
 	border-bottom: 1px solid #D0D0D0;
 	border-right: 1px solid #D0D0D0;
