--- a/site/assets/css/flexi_frontend.css
+++ b/site/assets/css/flexi_frontend.css
@@ -42,10 +42,10 @@
  * FLEXIcontent buttons for links: print, pdf, email, rss, approval etc
  **********************************************************************/
 #flexicontent .buttons {
-	display: block !important;
-	float: right !important;
-	margin: 0px !important;
-	padding: 0px !important;
+	display: block;
+	float: right;
+	margin: 0px;
+	padding: 0px;
 }
 
 #flexicontent .fc_editbutton,
@@ -59,33 +59,18 @@
 }
 #flexicontent .fc_editbutton > img,
 #flexicontent .buttons > a > img {
-	border: none !important;
-	vertical-align:top !important;
-	margin:1px 6px 0px 0px !important;
+	border: none;
+	vertical-align:top;
+	margin:1px 6px 0px 0px;
 }
 #flexicontent .fc_editbutton > img {
-	margin-top: 0px !important;
+	margin-top: 0px;
 }
 #flexicontent .fc_editbutton:not(.btn),
 #flexicontent .buttons > a:not(.btn) {
 	height: 1.4em;
 	line-height: 1.4em;
 	padding: 0 0 0 5px;
-}
-
-/* Used for approval button and maybe for others */
-.fc_bigbutton {
-	padding: 2px !important;
-	margin-right: 4px !important;
-	border:1px outset gray !important;
-	background: #e0e0e0 !important;
-	text-align: center;
-	display:block;
-}
-
-.fc_bigbutton:hover {
-	border-style: inset !important;
-	text-decoration: none;
 }
 
 .fc_comments_count {
@@ -394,398 +379,49 @@ div table.adminform td {
 
 
 
-/*********************************************/
-/* CONTAINERs of text-search & field filters */
-/*********************************************/
-
-fieldset.fc_search_set,    /* SEARCH view */
-fieldset.fc_filter_set {   /* CATEGORY view */
-	border: 1px solid #cccccc;
-	margin: 12px 0 0 0;
-	padding: 1%;
-	width: 100%;
-	box-sizing: border-box;
-	min-width: inherit !important; /* workaround for chrome fieldset width bug */
-	display: block;
-}
-/* TITLE OF CONTAINER of search (field) filters */
-fieldset.fc_search_set legend,
-fieldset.fc_filter_set legend {
-	width: auto;
-	border: 0px solid;
-	padding: 0px;
-	margin: 0px;
-}
-fieldset.fc_search_set legend .fc_legend_text,
-fieldset.fc_filter_set legend .fc_legend_text {
-	background: transparent;
-	border:1px solid lightgray;
-	color:gray;
-	display:block;
-	margin:0 0 5px 0;
-	padding:8px 10px 8px 10px;
-	border-radius: 6px;
-	display: inline-block;
-	line-height: 0.5em;
-	position: relative;
-	top: 0px;
-}
-fieldset.fc_search_set legend .fc_legend_text.hasTip,
-fieldset.fc_filter_set legend .fc_legend_text.hasTip {
-	background: lightyellow url(../images/note.gif) no-repeat 10px 50%;
-	border:1px solid lightgray;
-	color:gray;
-	display:block;
-	margin:0 0 5px 0;
-	padding-left: 36px;
-	border-radius: 6px;
-}
-fieldset.fc_search_set legend .fc_legend_text span,
-fieldset.fc_filter_set legend .fc_legend_text span {
-	font-weight: bold;
-	font-size: 12px;
-	padding: 0px;
-	margin: 0px;
-	display: inline-block;
-	line-height: 1em;
-}
-
-fieldset.fc_search_set .fc-mssg.fc-info,
-fieldset.fc_filter_set .fc-mssg.fc-info {
-	margin: 4px 16px 16px 16px;
-	font-size: 12px;
-}
-
-
-
-/*******************/
-/* (a) TEXT SEARCH */
-/*******************/
-
-/* the container */
-.fc_filter_text_search {}
-
-/* the label */
-.fc_filter.fc_filter_text_search .fc_filter_label,
-.fc_filter_line.fc_filter_text_search .fc_filter_label {
-}
-
-/* text-search autocomplete */
-.ui-autocomplete {
-	z-index:1000 !important;  /* FORCED autocomplete list it to be over elements */
-}
-.ui-autocomplete-loading {
-	background: #eee url('../images/ajax-loader.gif') no-repeat 96% center;
-}
-
-
-/*********************/
-/* (b) FIELD FILTERs */
-/*********************/
-
-/* displayed between ranges */
-.fc_range {
-	background: url("../images/arrow_double.png") no-repeat scroll 0px 0px transparent !important;
-	width: 16px !important;
-	height: 16px !important;
-	border: 0px solid !important;
-	padding: 0px !important;
-	margin: 0px 0px 0px 2px !important;
-	display: inline-block !important;
-	vertical-align: middle !important;
-}
-// highlight labels of active filters
-#flexicontent ul.tabbernav li a.tabberheading.fc_filter_inactive {}
-#flexicontent ul.tabbernav li a.tabberheading.fc_filter_active { color:orange!important; }
-#flexicontent ul.tabbernav li:hover a.tabberheading.fc_filter_active { color:red!important; }
-
-/* handle input append / prepend */
-.fc_filter_html .input-append,
-.fc_filter_html .input-prepend {
-	margin:0px 4px 0px 0px !important;
-}
-.fc_filter_html .input-append button,
-.fc_filter_html .input-prepend button {
-	margin-top:6px !important;
-	height:29px !important;
-}
-.fc_filter_html .input-append button.btn,
-.fc_filter_html .input-prepend button.btn {
-	margin-top:3px !important;
-	height:29px !important;
-}
-
-/* removing filter choices */
-.fc_field_filter .fc_delall_filters {
-	background: url("../images/delete.png") no-repeat scroll 0px 0px transparent;
-	width: 16px;
-	height: 16px;
-	border: 0px solid;
-	padding: 0px;
-	margin: 4px 0px -4px 0px;
-	display: inline-block;
-	vertical-align: baseline;
-}
-
-/* Container of each individual field filter (both label and html) */
-.fc_filter,
-.fc_filter_line {
-	display: inline-block;
-	float: left;
-	white-space: normal;
-	border: 0px solid lightgray;
-	border-radius: 2px;
-}
-.fc_filter {
-	clear: none;
-	margin: 0px 2px 2px 0px;
-	padding: 1px 0% 1px 0%;
-	width: auto;
-	position: relative;
-}
-.fc_filter_line {
-	clear: both;
-	margin: 0px 0% 1px 0%;
-	padding: 0px 1%;
-	width: 98%;
-}
-.fc_filter.fc_even, .fc_filter_line.fc_even { /*background: #E0E0E0;*/ }
-.fc_filter.fc_odd,  .fc_filter_line.fc_odd { /*background: #EEEEEE;*/ }
-
-form > .fc_filter_line {  /* filters placed directly inside form aka outside the filter_box */
-	margin: 0px 1% 0px 1%;
-	width: 96%;
-}
-
-.fc_filter .fc_filter_tip_inline,
-.fc_filter .fc_filter_label_inline,
-.fc_filter_line .fc_filter_tip_inline,
-.fc_filter_line .fc_filter_label_inline {
-	color: #FFFFFF;
-	display: inline-block;
-	font-size: 10.998px;
-	font-weight: bold;
-	line-height: 14px;
-	padding: 4px 4px;
-	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
-	vertical-align: baseline;
-	white-space: nowrap;
-	border-radius: 5px;
-	margin: 0px 2px 0px 4px !important;
-}
-.fc_filter .fc_filter_label_inline,
-.fc_filter_line .fc_filter_label_inline {
-	background-color: #555;
-}
-.fc_filter .fc_filter_tip_inline,
-.fc_filter_line .fc_filter_tip_inline {
-	background-color: darkgray;
-}
-
-/* Container of each individual field filter LABEL */
-.fc_filter .fc_filter_label,
-.fc_filter_line .fc_filter_label {
-	float: left !important;
-	display: inline-block !important;
-	color: white;
-	background-color: #909090;
-	border-width: 0px;
-	font-weight: normal;
-	font-size: 12px;
-	font-family: georgia,arial;
-	text-align: right;
-	border-radius: 3px;
-	text-shadow: 2px 4px 3px rgba(0,0,0,0.3);
-}
-
-
-.fc_filter .fc_filter_label {
-	clear: both;
-	width: auto !important;
-	max-width: 150px !important;
-	padding: 3px 4px !important;
-	margin: 2px 8px 3px 8px !important;
-}
-.fc_filter_line .fc_filter_label {
-	clear: none;
-	width: 15% !important;
-	max-width: 200px !important;
-	padding: 6px 1% !important;
-	margin: 2px 2px 0px 0px !important;
-	text-align:left !important;
-}
-
-/* Container of each individual field filter HTML, either compact view (floating with separator element) or per line */
-.fc_filter .fc_filter_html,
-.fc_filter_line .fc_filter_html {
-	display: inline-block;
-	float: left;
-	font-size: 90%;
-	padding: 0px 0% 0px 0% !important;
-	margin: 0px 0% 0px 0% !important;
-}
-.fc_filter_html {  position: relative !important; display: inline-block !important;  }
-/*.fc_filter .fc_filter_html {  clear: both;  }*/
-.fc_filter_line .fc_filter_html {  clear: none; width: 80% !important;  }
-
-/* Clear filter label from filter html*/
-.fc_filter_line.fc_clear_label .fc_filter_label {  width: auto !important; }
-.fc_filter_line.fc_clear_label .fc_filter_html {  clear: both; width: 100% !important;  }
-
-/* Highlight date calendar inside FC filters */
-.fc_filter_html .calendar { vertical-align: bottom; margin: 0px 6px 9px 2px; cursor: pointer; }
-.fc_filter_html .calendar:hover { border: 1px solid darkred; }
-
-/* Mulitple form field elements inside a filter area */
-.fc_filter_html .fc_filter_element { display:inline-block; white-space: nowrap; position: relative; }
-
-/* The form element(s) of each field filter inside filter's HTML */
-.fc_field_filter label, .flexicontent .fc_field_filter {
-	font-size: 11px !important;
-}
-.fc_filter_html .fc_text_filter,
-.fc_filter_html .fc_field_filter {
-	color: black !important;
-	font-size: 11px !important;
-	font-weight: normal !important;
-	display: inline-block /*!important*/; /*important problematic for hidding*/
-	padding: 2px 0px 2px 4px !important;
-	margin: 2px 0px 2px 4px !important;
-	width: auto !important;
-}
-.fc_filter_html .fc_text_filter.select2-container.select2-container-multi,
-.fc_filter_html .fc_field_filter.select2-container.select2-container-multi {
-	margin: 2px 0px 2px 4px !important;
-}
-.fc_filter_html :not(.input-prepend):not(.input-append) > .fc_text_filter,
-.fc_filter_html :not(.input-prepend):not(.input-append) > .fc_field_filter {
-	border-radius: 5px !important;
-	-moz-border-radius: 5px !important;
-	-webkit-border-radius: 5px !important;
-}
-.fc_filter_html input.fc_text_filter,
-.fc_filter_html input.fc_field_filter,
-.fc_filter_html input.fc_text_filter:focus,
-.fc_filter_html input.fc_field_filter:focus {
-	height: auto;
-	line-height: 150%;
-	padding: 5px 4px 6px 4px !important;
-	margin: 3px 4px 3px 8px !important;
-	position: relative;
-	/* background: transparent; ... does not work properly with ie8/9, it causes: */
-	/* any element with less z-index to be placed above this element, */
-	/* e.g. the span element for showing an inner is placed above, thus preventing focusing of the input !! */
-	border: 1px solid gray !important;
-	opacity: 0.5; filter:alpha(opacity=50);
-	min-width: 120px !important;
-	vertical-align: top;
-}
-.fc_filter_html :not(.input-append):not(.input-prepend) > input.fc_text_filter,
-.fc_filter_html :not(.input-append):not(.input-prepend) > input.fc_field_filter,
-.fc_filter_html :not(.input-append):not(.input-prepend) > input.fc_text_filter:focus,
-.fc_filter_html :not(.input-append):not(.input-prepend) > input.fc_field_filter:focus {
-	padding: 5px 26px 6px 4px !important;
-	background: url(../images/magnifier-left.png) 96% 4px no-repeat white;
-}
-.fc_filter_html :not(.input-prepend):not(.input-append) > .input.fc_text_filter,
-.fc_filter_html :not(.input-prepend):not(.input-append) > .input.fc_field_filter,
-.fc_filter_html :not(.input-prepend):not(.input-append) > .input.fc_text_filter:focus,
-.fc_filter_html :not(.input-prepend):not(.input-append) > .input.fc_field_filter:focus {
-}
-.fc_filter_html .input-append > input.fc_text_filter,
-.fc_filter_html .input-append > input.fc_field_filter,
-.fc_filter_html .input-append > input.fc_text_filter:focus,
-.fc_filter_html .input-append > input.fc_field_filter:focus {
-	margin-right:0px !important; border-top-right-radius:0px !important;  border-bottom-right-radius:0px !important;
-}
-.fc_filter_html .input-prepend > input.fc_text_filter,
-.fc_filter_html .input-prepend > input.fc_field_filter,
-.fc_filter_html .input-prepend > input.fc_text_filter:focus,
-.fc_filter_html .input-prepend > input.fc_field_filter:focus {
-	margin-left:0px !important; border-top-left-radius:0px !important;  border-bottom-left-radius:0px !important;
-}
-/* enlarge field in views ... (non-module) */
-input.fc_text_filter:not(.fc_iscalendar),  input.fc_text_filter:not(.fc_iscalendar):focus,
-input.fc_field_filter:not(.fc_iscalendar), input.fc_field_filter:not(.fc_iscalendar):focus {
-	min-width: 180px !important;
-}
-input.fc_text_filter.fc_iscalendar,
-input.fc_field_filter.fc_iscalendar {
-	min-width: 60px !important;
-}
-
-label.fc_filter_val.fc_cleared { display:inline-block; float:left !important; clear:both; }
-.fc_filter_val_lbl { }
-.fc_filter_val_img { display:inline-block; float:left !important; }
-/*.fc_filter_val_img:after { content: '\A'; white-space: pre; }*/
-.fc_filter_val_img > img { margin:2px 12px 2px 4px; vertical-align:top; }
-label.fc_filter_val + .fc_filter_val_img > img { margin: 4px 12px 2px -8px; }
-
-
-form.fc_instant_filter { display: block; margin: 0px !important; padding: 0px !important; position: relative !important; }
-select.fc_field_filter { margin: 2px 2px 2px 2px !important; }
-input.fc_text_filter { vertical-align: top; }
-input.fc_field_filter { vertical-align: top; }
-span.fc_field_filter { border-width: 0px !important; }
-ul.fc_field_filter.fc_checkradio_group {
-	margin: 2px 0px 2px 2px !important;
-	padding: 3px 4px 3px 2px !important;
-	height: auto !important;
-	max-height: auto !important;
-	position: static !important;
-	float: left !important;
-	text-align: left !important;
-}
-ul.fc_field_filter.fc_checkradio_group label {
-	margin: 6px 6px 4px 0px !important;
-	display: inline-block;
-}
-
-
 /* Inner Labels */
 .fc_has_inner_label, .fc_has_inner_prompt {
-	color: gray !important;
-	position: absolute !important;
+	color: gray;
+	position: absolute;
 	display: block;
-	*line-height: 1.5em !important;  /* ie6/ie7 */
-	*height: 1.5em !important;  /* ie6/ie7 */
 	padding: 0px 0px 0px 4px;
 	font-size:12px;
 }
 
 .fc_has_inner_label.fc_has_inner_label_input,
 .fc_has_inner_prompt.fc_has_inner_prompt_input {
-	left:14px !important; top:10px !important;
-	color: black !important;
-	line-height: 150% !important;
-	padding: 0px 0px 0px 4px !important;
+	left:14px;
+	top:10px;
+	color: black;
+	line-height: 150%;
+	padding: 0px 0px 0px 4px;
 }
 .fc_has_inner_label.fc_has_inner_label_select2,
 .fc_has_inner_prompt.fc_has_inner_prompt_select2 {
-	left:4px !important; top:8px !important;
-	*top:4px !important; 
+	left:4px;
+	top:8px;
 }
 
 /* Highlighting selected choices */
 .fc_filter_html .select2-search-choice div,
 .select2-container .select2-choice.fc_highlight span,
 .fc_highlight {
-	color: darkorange !important;
-	font-weight: bold !important;
+	color: darkorange;
+	font-weight: bold;
 }
 
 .select2-container .select2-choice.fc_highlight_disabled span,
 .fc_highlight_disabled {
-	color: gray !important;
-	font-weight: normal !important;
-	text-decoration: line-through !important;
-	font-style: italic !important;
+	color: gray;
+	font-weight: normal;
+	text-decoration: line-through;
+	font-style: italic;
 }
 
 
-/*******************/
-/* (c) Alpha Index */
-/*******************/
+/***************/
+/* Alpha Index */
+/***************/
 
 /* Top Container */
 #fc_alpha {
@@ -850,10 +486,10 @@ ul.fc_field_filter.fc_checkradio_group label {
 
 
 
-/*******************************************************/
-/* (d) ITEMs TOTAL Container, also contains selectors: */
-/* for (a) # pages per limit AND (b) items order by    */
-/*******************************************************/
+/****************************************************/
+/* ITEMs TOTAL Container, also contains selectors:  */
+/* # pages, ordering selector, layout selector, etc */
+/****************************************************/
 
 #flexicontent .item_total {
 	border: 1px solid lightgray;
@@ -1035,7 +671,7 @@ div.comments {
 #comments-form p, 
 #comments-form #comments-form-buttons, 
 #comments-form #comments-form-error {
-	margin-left: 0px !important;
+	margin-left: 0px;
 }
 
 #comments-form #comments-form-message, 
