--- a/site/assets/css/flexi_frontend.css
+++ b/site/assets/css/flexi_frontend.css
@@ -74,14 +74,16 @@
 }
 
 .fc_comments_count {
-	background: url(../images/comments.png) no-repeat !important; color: green;
+	background: url(../images/comments.png) no-repeat;
+	color: green;
 	padding-left: 20px;
 	height: 16px;
 	margin: 5px 5px 0px 0px;
 	float:left;
 }
 .fc_comments_count_nopad {
-	background: url(../images/comments.png) no-repeat !important; color: green;
+	background: url(../images/comments.png) no-repeat;
+	color: green;
 	padding-left: 20px;
 	height: 16px;
 	margin: 0px 5px 0px 0px;
@@ -176,7 +178,7 @@
 
 #flexicontent .subcategorieslabel,
 #flexicontent .peercategorieslabel {
-	display:inline-block !important;
+	display:inline-block;
 	margin:0px 0px 6px;
 	font-weight:bold;
 	border-bottom:1px dashed gray;
@@ -296,127 +298,6 @@ div table.adminform td {
 	padding: 0px 0px;
 }
 
-/* Outer container of (a) text search, (b) field filters */
-#flexicontent #fc_filter_box {
-	display: block;
-	clear: both;
-	border: solid 0px #dddddd;
-	margin: 0px 0px 12px 0px;
-	padding: 0%;
-	width: 100%;
-}
-
-/* Blocking overlay during form being applied and page reloading */
-#fc_filter_form_blocker {
-	display: none;
-	z-index: 1000;
-	
-	position: fixed;
-	top: 0;
-	left: 0;
-	
-	width: 100%;
-	height: 100%;
-}
-#fc_filter_form_blocker .fc_blocker_opacity {
-	display: block;
-	z-index: 1000;
-	
-	position: absolute;
-	top: 0;
-	left: 0;
-	
-	opacity: 0.3;
-	filter:alpha(opacity=30); /* For IE8 and earlier */
-	background-color: #000;
-	
-	width: 100%;
-	height: 100%;
-}
-#fc_filter_form_blocker .fc_blocker_content {
-	display: block;
-	z-index: 1001;
-	position: fixed;
-	top: 200px;
-	left: 40%;
-	
-	color: black;
-	background: white url(../images/ajax-loader.gif) 30px 40px no-repeat;
-	opacity:1;
-	filter:alpha(opacity=100); /* For IE8 and earlier */
-	
-	width: auto;
-	padding: 40px 0px 46px 60px;
-	margin: 0px;
-	
-	font-size: 12px;
-	font-weight: bold;
-	border: 1px solid lightgray;
-	border-radius: 8px;
-	text-align: left;
-}
-
-#fc_filter_form_blocker .fc_blocker_bar {
-	display: block;
-	width: 200px;
-	height: 22px;
-	border: 1px solid #111;
-	background-color: #292929;
-	position: relative;
-	left: -30px;
-	top:6px;
-}
-
-#fc_filter_form_blocker .fc_blocker_bar div {
-	display: block;
-	height: 100%;
-	color: #fff;
-	text-align: right;
-	line-height: 22px; /* same as #progressBar height if we want text middle aligned */
-	width: 0;
-	background-color: #0099ff;
-}
-
-
-
-/* Inner Labels */
-.fc_has_inner_label, .fc_has_inner_prompt {
-	color: gray;
-	position: absolute;
-	display: block;
-	padding: 0px 0px 0px 4px;
-	font-size:12px;
-}
-
-.fc_has_inner_label.fc_has_inner_label_input,
-.fc_has_inner_prompt.fc_has_inner_prompt_input {
-	left:14px;
-	top:10px;
-	color: black;
-	line-height: 150%;
-	padding: 0px 0px 0px 4px;
-}
-.fc_has_inner_label.fc_has_inner_label_select2,
-.fc_has_inner_prompt.fc_has_inner_prompt_select2 {
-	left:4px;
-	top:8px;
-}
-
-/* Highlighting selected choices */
-.fc_filter_html .select2-search-choice div,
-.select2-container .select2-choice.fc_highlight span,
-.fc_highlight {
-	color: darkorange;
-	font-weight: bold;
-}
-
-.select2-container .select2-choice.fc_highlight_disabled span,
-.fc_highlight_disabled {
-	color: gray;
-	font-weight: normal;
-	text-decoration: line-through;
-	font-style: italic;
-}
 
 
 /***************/
@@ -732,10 +613,10 @@ dl.tabs dt:hover, .flexicontent dl.tabs dt:hover {
 }
 
 dl.tabs dt a:link, .flexicontent dl.tabs dt a:link {
-	color: black !important;
-	outline: medium none !important;
-	text-decoration: none !important;
-	background: none !important;
+	color: black;
+	outline: medium none;
+	text-decoration: none;
+	background: none;
 }
 
 
@@ -769,31 +650,46 @@ div.current dd {
 	margin-bottom: 2px;
 }
 
-/* strange property in japurity /-) */
-#flexicontent .hasToolTip img,
-#flexicontent .hasTip img {
-	margin: 0;
-}
-
-/* Empty image container for image field (item form) */
-.empty_image {
+/* Image field, empty image container for  (item form) */
+div.empty_image {
 	display: block;
-	background: #F9F9F9 url(../../../../administrator/components/com_flexicontent/assets/images/image_add.png) no-repeat scroll 50% 50%;
+	background: #F9F9F9 url(../images/image_add.png) no-repeat scroll 50% 50%;
 	border:1px solid silver;
 	margin-bottom:3px;
+	word-wrap:break-word;
 }
 
-/* Styling for image field (frontend FC templates) */
-.fc_field_image {
-	padding: 1px !important;
-	border: 1px solid lightgray !important;
-	border-radius:5px !important;
-	-moz-border-radius: 5px !important;
-	-webkit-border-radius: 5px !important;
+/* Image field, thumbnails (value viewing) */
+img.fc_field_image {
+	padding: 1px;
+	border: 1px solid lightgray;
+	border-radius:5px;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
 }
-.fc_image_thumb {
+div .fc_image_thumb {
 	display: inline-block;
+	text-decoration: none;
 }
+
+/* Image field, thumbnails tooltips (value viewing) */
+div .fc_img_tooltip_title {
+	line-height:1em;
+	font-weight:bold;
+}
+div .fc_img_tooltip_desc {
+	line-height:1em;
+}
+
+/* Radio, checkbox, select, etc (indexed fields), the non-selected values */
+div .fc_field_unsused_val {
+ text-decoration: line-through;
+}
+div .fc_field_unsused_val img {
+ opacity:0.4;
+ filter:alpha(opacity=40); /* For IE8 and earlier */
+}
+
 
 /* ADD button used by fields (item form) */
 .button-add a {
@@ -810,14 +706,6 @@ div.current dd {
 	text-decoration: none;
 }
 
-/* Styling for image field tooltips (frontend FC templates) */
-.fc_img_tooltip_title {
-	line-height:1em;
-	font-weight:bold;
-}
-.fc_img_tooltip_desc {
-	line-height:1em;
-}
 
 
 
@@ -832,53 +720,54 @@ div.current dd {
 }
 
 /* search form */
-#flexicontent form#searchForm {
+.flexicontent.search form#searchForm {
 	clear: both;
 	float: none;
 }
 
+/* Search (field) filters TABLE */
+.flexicontent.fcsearch table.fc_search_tbl {
+	border-collapse: separate;
+	border-spacing: 1px;
+	width: 100%;
+}
+
 /* Container of TEXT search label */
-.fc_search_label_cell {
+.flexicontent.fcsearch table.fc_search_tbl .fc_search_label_cell {
 	text-align:right;
 	vertical-align:middle;
 	padding: 4px 6px 4px 4px;
 	font-weight:bold;
 	background-color:#eeeeee;
-	font-size: 11px !important;
+	font-size: 11px;
 	white-space: nowrap;
 	width: 5%;
 }
 
 /* Container of TEXT search form field */
-.fc_search_option_cell {
+.flexicontent.fcsearch table.fc_search_tbl .fc_search_option_cell {
 	padding: 2px 4px 2px 6px;
-	font-size: 11px !important;
+	font-size: 11px;
 }
 
 /* Search Filter ROW */
-.fc_search_row_0 td {
+.flexicontent.fcsearch table.fc_search_tbl .fc_search_row_0 td {
 	background-color: #f0f0f0;
 }
 
 /* Search Filter CELL */
-.fc_search_row_1 td {
+.flexicontent.fcsearch table.fc_search_tbl .fc_search_row_1 td {
 	background-color: #e7e7e7;
 }
 
-/* Search (field) filters TABLE */
-table.fc_search_tbl {
-	border-collapse: separate !important;
-	border-spacing: 1px !important;
-	width: 100% !important;
-}
 
 /* Search (field) filters CELLs */
-table.fc_search_tbl td {
-	border-width: 0px !important;
-	border-spacing: 1px !important;
+.flexicontent.fcsearch table.fc_search_tbl td {
+	border-width: 0px;
+	border-spacing: 1px;
 }
 
-div.flexicontent.fcsearch .inputbox {
+.flexicontent.fcsearch .inputbox {
 	border: 1px solid lightgray;
 	border-radius:5px;
 	-moz-border-radius: 5px;
@@ -887,38 +776,38 @@ div.flexicontent.fcsearch .inputbox {
 	height: auto;
 }
 
-div.flexicontent.fcsearch  fieldset.fc_search_result {
+.flexicontent.fcsearch  fieldset.fc_search_result {
 	padding: 16px 4px 16px 4px;
 	margin: 0px;
 	border: 1px solid transparent;
 }
 
-div.flexicontent.fcsearch  fieldset.fc_search_result.fcodd {
+.flexicontent.fcsearch  fieldset.fc_search_result.fcodd {
 	background-color: #f0f0f0;
 }
 
-div.flexicontent.fcsearch  fieldset.fc_search_result.fceven {
+.flexicontent.fcsearch  fieldset.fc_search_result.fceven {
 	background-color: #f7f7f7;
 }
 
-div.flexicontent.fcsearch  fieldset.fc_search_result:hover {
+.flexicontent.fcsearch fieldset.fc_search_result:hover {
 	border: 1px dashed gray;
 }
 
-div.flexicontent.fcsearch  .fc_search_result_title {
+.flexicontent.fcsearch .fc_search_result_title {
 	float: left;
 }
-div.flexicontent.fcsearch  .fc_search_result_text {
+.flexicontent.fcsearch .fc_search_result_text {
 }
-div.flexicontent.fcsearch  .fc_search_result_image { display: inline-block; }
-div.flexicontent.fcsearch  .fc_search_result_image.fcleft { float: left; margin: 0px 16px 0px 8px; }
-div.flexicontent.fcsearch  .fc_search_result_image.fcright { float: right; margin: 0px 8px 0px 16px; }
-div.flexicontent.fcsearch  .fc_search_result_image img { padding:1px; border:1px solid #aaaaaa; border-radius: 4px; }
-div.flexicontent.fcsearch  .fc_search_result_filters {
+.flexicontent.fcsearch .fc_search_result_image { display: inline-block; }
+.flexicontent.fcsearch .fc_search_result_image.fcleft { float: left; margin: 0px 16px 0px 8px; }
+.flexicontent.fcsearch .fc_search_result_image.fcright { float: right; margin: 0px 8px 0px 16px; }
+.flexicontent.fcsearch .fc_search_result_image img { padding:1px; border:1px solid #aaaaaa; border-radius: 4px; }
+.flexicontent.fcsearch .fc_search_result_filters {
 }
-div.flexicontent.fcsearch  .fc_search_result_fields {
+.flexicontent.fcsearch .fc_search_result_fields {
 }
-div#flexicontent.flexicontent.fcsearch  .highlight {
+.flexicontent.fcsearch .highlight {
 	background: none repeat scroll 0 0 #FFFFAA;
 	border-radius:5px;
 	-moz-border-radius: 5px;
@@ -927,7 +816,7 @@ div#flexicontent.flexicontent.fcsearch  .highlight {
 	font-weight: normal;
 	padding: 3px 5px;
 }
-div#flexicontent.flexicontent.fcsearch  .fc_mublock {
+.flexicontent.fcsearch  .fc_mublock {
 	display: block;
 	float: right;
 }
@@ -938,25 +827,22 @@ div#flexicontent.flexicontent.fcsearch  .fc_mublock {
  ************************************************************************/
 
 #flexicontent .fc_inline_block {
-	*display: inline !important; /* Hack for IE 7 and less */
-	_height: 1%; /* Hack for IE6 */
-	display: inline-block !important; /* For modern browsers */
-	float: none !important;
-	vertical-align: top; /* Just makes sure everything is at the top */
-	width: auto !important;
-	zoom: 1; /* Hack for IE */
+	display: inline-block;
+	float: none;
+	vertical-align: top;
+	width: auto;
 }
 
 #flexicontent .fc_block {
-	display: block !important;
+	display: block;
 }
 
 #flexicontent .fc_inline {
-	display: inline !important;
+	display: inline;
 }
 
 #flexicontent .fc_inline_clear {
-	display: inline!important;
+	display: inline;
 }
 
 #flexicontent .fc_inline_clear:after {
@@ -975,7 +861,7 @@ div#flexicontent.flexicontent.fcsearch  .fc_mublock {
  ****************************/
 
 table.admintable {
-	border-collapse:separate !important;
+	border-collapse:separate;
 	border-spacing:2px;
 }
 
@@ -1012,8 +898,8 @@ table.admintable td {
 
 #flexicontent.fcdirectory .fccatcolumn {
 	float: left;
-	margin: 0% 1% 0% 0% !important;
-	padding: 0px !important;
+	margin: 0% 1% 0% 0%;
+	padding: 0px;
 }
 
 #flexicontent.fcdirectory h2.fccat_title_box {
@@ -1060,15 +946,15 @@ table.admintable td {
 }
 
 #flexicontent.fcdirectory ul.fcsubcats_list {
-	border-top: 1px dashed #dddddd !important;
+	border-top: 1px dashed #dddddd;
 	list-style: none;
 	margin: 3px 0 7px;
 	padding: 0 7px;
 }
 
 #flexicontent.fcdirectory li.fcsubcat {
-	border-bottom: 1px dashed #dddddd !important;
-	margin: 2px 0px 2px 0px !important;
+	border-bottom: 1px dashed #dddddd;
+	margin: 2px 0px 2px 0px;
 }
 
 #flexicontent.fcdirectory li.fcsubcat.odd {
@@ -1158,10 +1044,10 @@ table.admintable td {
 /*#flexicontent.fctypeNN*/ a#fc_subtitle_tabset_nav_4, /*#flexicontent.fctypeNN*/ a#fc_subtitle_tabset_nav_5, /*#flexicontent.fctypeNN*/ a#fc_subtitle_tabset_nav_6,
 /*#flexicontent.fctypeNN*/ a#fc_subtitle_tabset_nav_7, /*#flexicontent.fctypeNN*/ a#fc_subtitle_tabset_nav_8, /*#flexicontent.fctypeNN*/ a#fc_subtitle_tabset_nav_9,
 /*#flexicontent.fctypeNN*/ a#fc_subtitle_tabset_nav_10, /*#flexicontent.fctypeNN*/ a#fc_subtitle_tabset_nav_11, /*#flexicontent.fctypeNN*/ a#fc_subtitle_tabset_nav_12 {
-	/*background-image: url(../images/information.png) !important;*/
-	background-position: 1px 2px !important;
-	background-repeat: no-repeat !important;
-	/*padding-left: 20px !important;*/
+	/*background-image: url(../images/information.png);*/
+	background-position: 1px 2px;
+	background-repeat: no-repeat;
+	/*padding-left: 20px;*/
 }
 
 /*#flexicontent.fctypeNN*/ #fc_bottom_tabset ul.tabbernav li a {  padding-left: 20px;  }
@@ -1169,57 +1055,21 @@ table.admintable td {
 /*#flexicontent.fctypeNN*/ a#fc_bottom_tabset_nav_4, /*#flexicontent.fctypeNN*/ a#fc_bottom_tabset_nav_5, /*#flexicontent.fctypeNN*/ a#fc_bottom_tabset_nav_6,
 /*#flexicontent.fctypeNN*/ a#fc_bottom_tabset_nav_7, /*#flexicontent.fctypeNN*/ a#fc_bottom_tabset_nav_8, /*#flexicontent.fctypeNN*/ a#fc_bottom_tabset_nav_9,
 /*#flexicontent.fctypeNN*/ a#fc_bottom_tabset_nav_10, /*#flexicontent.fctypeNN*/ a#fc_bottom_tabset_nav_11, /*#flexicontent.fctypeNN*/ a#fc_bottom_tabset_nav_12 {
-	/*background-image: url(../images/information.png) !important;*/
-	background-position: 1px 2px !important;
-	background-repeat: no-repeat !important;
-	/*padding-left: 20px !important;*/
+	/*background-image: url(../images/information.png);*/
+	background-position: 1px 2px;
+	background-repeat: no-repeat;
+	/*padding-left: 20px;*/
 }
 
 
-/*************************************
- * FLEXIcontent radio/checkbox buttons
- *************************************/
-
-.flexi_radiotab {
-	display: inline-block !important;
-	padding: 4px 6px !important;
-	margin: 2px 0px 2px 4px !important;
-	border-radius:5px !important;
-	-moz-border-radius: 5px !important;
-	-webkit-border-radius: 5px !important;
-	border: 1px solid #cccccc !important;
-	text-decoration: none !important;
-	font-weight: normal !important;
-	font-size: 12px !important;
-	cursor: pointer !important;
-	float: left !important;
-	white-space:nowrap !important;
-	background-color: white !important;
-	color: black !important;
-}
-
-/* Highlighting selected choice(s) */
-.flexi_radiotab.highlight {
-	color: darkorange !important;
-	font-weight: bold !important;
-}
-
-.flexi_radiotab input {
-	float: left !important;
-	margin: 0px 2px 0px 0px;
-	padding: 0px;
-	/*display:none !important;*/
-}
-
-.flexi_radiotab.fcdisabled {
-	color: #bbbbbb !important;
-}
 
 /***************************
  * Other unsorted CSS Rules
  ***************************/
 
-div.fancybox-wrap a { background: none!important;}
+div.fancybox-wrap a {
+	background: none;
+}
 
 #flexicontent .content {
 	float:none;
@@ -1227,47 +1077,23 @@ div.fancybox-wrap a { background: none!important;}
 }
 
 /* field container inside a tabbed position */
-.tabbertab  .flexi.element {
- /*display: block;
- float: left;
- clear: both;*/
-}
-
-
-#flexicontent .rc5 {
-	border-radius:5px !important;
-	-moz-border-radius: 5px !important;
-	-webkit-border-radius: 5px !important;
-}
-
-
-.fc_field_unsused_val {
- text-decoration: line-through;
-}
-
-.fc_field_unsused_val img {
- opacity:0.4;
- filter:alpha(opacity=40); /* For IE8 and earlier */
+.tabbertab .flexi.element {
 }
 
 .readon, .readon a {
-  *white-space: nowrap !important; /* ie6/ie7 */
 }
+
 
 
 /**********************************************************
  * Common styling (all templates) of field labels and value
  **********************************************************/
 
-#flexicontent .label {
-	font-weight: bold;
+.flexi.label:not(.label-success):not(.label-primary):not(.label-warning):not(.label-info) {
+	/*background-color: #999;*/
 }
-
-.flexi.label:not(.label-success):not(.label-primary):not(.label-w):not(.label-success):not(.label-success):not(.label-success) {
-	background-color: #999 !important;
-}
-#flexicontent .flexi.label, .flexi.label {
-	float: left;
+.flexi.label {
+	/*float: left;
 	display: inline-block;
 	vertical-align: baseline;
 	border-width: 0px;
@@ -1288,10 +1114,10 @@ div.fancybox-wrap a { background: none!important;}
 	text-align: right;
 	margin: 2px 6px 2px 2px;
 	padding: 3px 4px;
-	border-radius: 5px;
+	border-radius: 5px;*/
 }
 
-#flexicontent .flexi.value, .flexi.value {
+.flexi.value {
 	padding: 0px;
 	margin: 2px 0% 2px 0%;
 }
