--- a/site/assets/css/flexi_shared.css
+++ b/site/assets/css/flexi_shared.css
@@ -120,13 +120,7 @@ fieldset.fieldgroups legend span img {
 	padding-left: 5px;
 }
 
-/* image field */
-.empty_image {
-	display: block;
-	background: #F9F9F9 url(../images/image_add.png) no-repeat 50% 50%;
-	border:1px solid silver;
-	margin-bottom:3px;
-}
+
 /* Versioning */
 .versions-first {
 	border-bottom: 1px dotted silver;
@@ -885,6 +879,7 @@ table.adminform td #search { margin-bottom: 0px; padding: 4px !important; }
 	width: 50%;
 	padding: 0 32px 0 0;
 	margin: 0%;
+	box-sizing: border-box;
 }
 #flexicontent .span6.full_width_980.padded_wrap_box {
 	padding: 0;
