+ Added ability to allow users to change their recent votes (browser window has not closed), made CSS of voting more specific, converted JS of voting from mootools to jQuery, fixed extendedweblink form property for autoprefixing absolute URLs

--- a/plugins/flexicontent_fields/fcpagenav/fcpagenav/fcpagenav.css
+++ b/plugins/flexicontent_fields/fcpagenav/fcpagenav/fcpagenav.css
@@ -11,17 +11,17 @@
 }
 
 .flexi.fc-pagenav .fc-pagenav-return,
-.flexi.fc-pagenav .fc-pagenav-items-cnt {
-	margin-right: 20px;
+.flexi.fc-pagenav .fc-pagenav-items-cnt,
+.flexi.fc-pagenav .fc-pagenav-prev,
+.flexi.fc-pagenav .fc-pagenav-next {
+	margin: 2px 4px 2px 0px;
 	display: inline-block;
 }
 .flexi.fc-pagenav .fc-pagenav-prev,
 .flexi.fc-pagenav .fc-pagenav-next  {
-	margin: 0px;
-	display: inline-block;
 }
 
-.flexi.fc-pagenav .fc-pagenav_return {
+.flexi.fc-pagenav .fc-pagenav-return {
 	/*background: url(icons/table_multiple.png) no-repeat 0 center !important;
 	padding-left: 20px;*/
 }
