--- a/site/assets/css/fcvote.css
+++ b/site/assets/css/fcvote.css
@@ -4,45 +4,37 @@ div.fcvote {
 	vertical-align: middle;
 }
 
-div.fcvote > ul {
-	margin: 0;
-	padding: 0;
-}
-
-div.fcvote > ul > li {
-	background-position: 0;
-	margin: 0;
-	padding: 0;
-}
-
-div.fcvote > ul, 
-div.fcvote > ul > li a:hover, 
-div.fcvote > ul > li.current-rating {
+div.fcvote > ul.fcvote_list, 
+div.fcvote > ul.fcvote_list > li.voting-links a:hover, 
+div.fcvote > ul.fcvote_list > li.current-rating {
 	background-color: transparent;
 	background-position: left -1000px;
 	background-repeat: repeat-x;
 }
 
-div.fcvote > ul {
+div.fcvote > ul.fcvote_list {
 	background-position: left top;
 	list-style-image: none;
 	list-style-position: outside;
 	list-style-type: none;
-	margin: 0pt;
+	margin: 0;
+	padding: 0;
 	overflow: hidden;
-	padding: 0pt;
 	position: relative;
 	float: left;
 }
 
-div.fcvote > ul > li {
-	background-image: none;
+div.fcvote > ul.fcvote_list > li.current-rating,
+div.fcvote > ul.fcvote_list > li.voting-links {
 	display: inline;
-	padding: 0pt;
+	background-image: none;
+	background-position: 0;
+	margin: 0;
+	padding: 0;
 }
 
-div.fcvote > ul > li a, 
-div.fcvote > ul > li.current-rating {
+div.fcvote > ul.fcvote_list > li.voting-links a, 
+div.fcvote > ul.fcvote_list > li.current-rating {
 	background-color: transparent ;
 	border: medium none;
 	cursor: pointer;
@@ -56,31 +48,25 @@ div.fcvote > ul > li.current-rating {
 	top: 0pt;
 }
 
-div.fcvote > ul > li a:hover {
+div.fcvote > ul.fcvote_list > li.voting-links a:hover {
 	background-position: left bottom;
 }
 
-div.fcvote > ul > li.current-rating {
+div.fcvote > ul.fcvote_list > li.current-rating {
 	background-position: left center;
 	z-index: 0;
 }
 
-div.fcvote li a {
-	margin: 0 ;
-	padding: 0 ;
+div.fcvote > ul.fcvote_list > li.voting-links a {
+	margin: 0;
+	padding: 0;
 }
-/*
-div.fcvote li a.one   { width: 20%;  z-index: 6; }
-div.fcvote li a.two   { width: 40%;  z-index: 5; }
-div.fcvote li a.three { width: 60%;  z-index: 4; }
-div.fcvote li a.four  { width: 80%;  z-index: 3; }
-div.fcvote li a.five  { width: 100%; z-index: 2; }
-*/
 
 div.fcvote-label {
 	float: left;
 	min-width: 80px;
 	padding: 0 4px 0 0;
+	margin-right: 6px;
 	font-weight:normal;
 	font-size:90%;
 	text-align:right;
@@ -92,7 +78,7 @@ div.fcvote-label.xid-main {
 	font-style:normal;
 	font-weight:bold;
 }
-div.fcvote-count{
+div.fcvote-count {
 	float: left;
 	padding: 0 0 0 4px;
 }
@@ -102,19 +88,19 @@ div.fcvote {
 	line-height: 25px;
 }
 
-div.fcvote > ul {
+div.fcvote > ul.fcvote_list {
 	height: 25px;
 	width: 125px;
 }
 
-div.fcvote > ul, 
-div.fcvote > ul > li a:hover, 
-div.fcvote > ul > li.current-rating {
+div.fcvote > ul.fcvote_list, 
+div.fcvote > ul.fcvote_list > li.voting-links a:hover, 
+div.fcvote > ul.fcvote_list > li.current-rating {
 	background-image: url(../images/star.gif);
 }
 
-div.fcvote > ul > li a, 
-div.fcvote > ul > li.current-rating {
+div.fcvote > ul.fcvote_list > li.voting-links a, 
+div.fcvote > ul.fcvote_list > li.current-rating {
 	height: 25px;
 	line-height: 25px;
 }
